# glossai

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cmd_main.cpp  demo_operators.glo  glossai_cmd.rc  main.cpp  test_operators_2.glo  test_operators_3.glo
core/: CMakeLists.txt  ast.cpp  ast.h  context.cpp  context.h  evaluator.cpp  evaluator.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  lineparser.cpp  lineparser.h  parser.cpp  parser.h  test_ast.h
tests/: CMakeLists.txt  test_calc_integration.cpp  test_interpreter.cpp
tests/test_scripts/: fibonacci.glo  math_clean.glo  math_examples.glo  math_examples_fixed.glo  math_examples_new.glo  multiline_test.glo  test_advanced.txt  test_assignment.txt  test_cpp_operators.glo  test_fibonacci.glo  test_final.txt  test_if.glo  test_loop.glo  test_math.glo  test_minimal.glo  test_operators.glo  test_operators_4.glo  test_operators_simple.glo  test_simple.glo  test_while.glo  test_while.txt  test_while2.txt
ui/: CMakeLists.txt  interpreterwidget.cpp  interpreterwidget.h  interpreterwidget.ui
